# flight-image-geotagger-rs

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  data_providers.rs  image_geotagger.rs  main.rs  models.rs
src/data_providers/: flightradar24_provider.rs  json_provider.rs
src/models/: coord.rs  flight_geodata.rs  result.rs
src/parsers/: json_parser.rs
