[package]
name = "flight-image-geotagger-rs"
description = "Geotag images taken on a commercial flight."
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
kamadak-exif = "0.6.1"
num = "0.4.3"
serde = "1.0.217"
serde_json = "1.0.134"
